<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Feature List</string>
    
    <!-- Menu -->
    <!-- MainActivity menu -->
    <string name="menu_help">Help</string>
    
    <!-- ViewLogActivity -->
    <string name="view_log_activity_log">Log</string>
    
    <!-- BaseActivity -->
    <string name="base_activity_txv_tips">No update,stay tuned......</string>
    
    <!-- UIFeatureList -->
    <string name="ui_feature_list_title">UI feature list</string>
    
    <!-- ViewFeatureList -->
    <string name="view_feature_list_titile">View feature list</string>
    
    <!-- ViewLifeActivity -->
    <string name="view_life_activity_title">View life</string>
    
    <!-- CustomViewActivity -->
    <string name="custom_view_activity_title">Custom view</string>
    
    <!-- CombinationViewActivity -->
    <string name="combination_view_activity_title">Custom combination view</string>
    
    <!-- HandleTouchEventActivity -->
    <string name="handle_touch_event_activity_title">Test touch event</string>
    <string name="handle_touch_event_activity_toast">Start to record touch event</string>
    
    <!-- TouchEventSetting -->
    <string name="touch_event_setting_title">Touch event setting</string>
    <string name="touch_event_setting_menu">Setting</string>
    <string name="touch_event_view_log_menu">View log</string>
    <string name="touch_event_setting_value_true">true</string>
    <string name="touch_event_setting_value_false">false</string>
    <string name="touch_event_setting_value_dispatch_event">super.dispatchTouchEvent(ev)</string>
    <string name="touch_event_setting_value_intercept_event">super.onInterceptTouchEvent(ev)</string>
    <string name="touch_event_setting_value_touch_event">super.onTouchEvent(ev)</string>
    
    <!-- ViewGroupFeatureList -->
    <string name="view_group_feature_list_title">ViewGroup feature list</string>
    
    <!-- AnimationFeatureList -->
    <string name="animation_feature_list_title">Animation feature list</string>
    
    <!-- FrameAnimation -->
    <string name="frame_animation_title">Frame animation</string>
    <string name="frame_animation_txv_simple">1.Simple: Play time</string>
    <string name="frame_animation_txv_simple_repeat_play">2.Simple: Repeat Play</string>
    <string name="frame_animation_txv_hard">3.Hard: listening animation start and end</string>
    
    <!-- TweenAnimation -->
    <string name="tween_animation_title">Tween animation</string>
    <!-- UnitTweenAnimation -->
    <string name="unit_tween_animation_title">Unit tween animation</string>
    <!-- UnitTweenEffectActivity -->
    <string name="unit_tween_effect_title">Unit tween effect</string>
    <string name="unit_tween_effect_alpha">Gradient transparency animation</string>
    <string name="unit_tween_effect_trans">Conversion position animation</string>
    <string name="unit_tween_effect_scale">Gradient size retractable animation</string>
    <string name="unit_tween_effect_rotate">Rotary screen transition animation effects</string>
    <string name="unit_tween_effect_4">Alpha+Scale</string>
    <string name="unit_tween_effect_5">Alpha+Translate</string>
    <string name="unit_tween_effect_6">Alpha+Rotate</string>
    <string name="unit_tween_effect_7">Scale+Translate</string>
    <string name="unit_tween_effect_8">Scale+Rotate</string>
    <string name="unit_tween_effect_9">Translate+Rotate</string>
    <string name="unit_tween_effect_10">Alpha+Scale+Translate</string>
    <string name="unit_tween_effect_11">Alpha+Scale+Rotate</string>
    <string name="unit_tween_effect_12">Alpha+Translate+Rotate</string>
    <string name="unit_tween_effect_13">Alpha+Scale+Translate+Rotate</string>
    <!-- CombinationTweenAnimation -->
    <string name="combination_tween_animation_title">Combination tween animation</string>
    
    <!-- ActivityFeatureList-->
    <string name="activity_feature_list_title">Activity feature list</string>
    
    <!-- ActivityLife -->
    <string name="activity_life_title">Activity life</string>
    <string name="activity_life_txv_result">Run log</string>
    <string name="activity_life_btn_show">Show log</string>
    <string name="activity_life_btn_clear">Clear log</string>
    <string name="activity_life_log_oncreate">Call back: onCreate()\n</string>
    <string name="activity_life_log_onrestart">Call back: onRestart()\n</string>
    <string name="activity_life_log_onstart">Call back: onStart()\n</string>
    <string name="activity_life_log_onresume">Call back: onResume\n</string>
    <string name="activity_life_log_onpause">Call back: onPause\n</string>
    <string name="activity_life_log_onstop">Call back: onStop\n</string>
    <string name="activity_life_log_ondestroy">Call back: onDestroy()\n</string>
    <string name="activity_life_log_onrestoreinstancestate">Call back: onRestoreInstanceState()\n</string>
    <string name="activity_life_log_onsaveinstancestate">Call back: onSaveInstanceState()\n</string>
    
    <!-- MenuFeatrueList -->
    <string name="menu_featrue_list_title">Menu list</string>
    <!-- OptionMenuActivity -->
    <string name="option_menu_activity_title">Option Menu</string>
    <string name="option_menu_activity_menu_1">Meun1</string>
    <string name="option_menu_activity_menu_2">Menu2</string>
    <string name="option_menu_activity_menu_2_1">Menu2_1</string>
    <string name="option_menu_activity_menu_2_2">Menu2_2</string>
    
    <!-- ContextMenuActivity -->
    <string name="context_menu_activity_title">Context menu</string>
    <string name="context_menu_activity_menu_1">context menu1</string>
    <string name="context_menu_activity_menu_2">context menu2</string>
    <string name="context_menu_activity_menu_2_1">context menu2_1</string>
    <string name="context_menu_activity_menu_2_2">context menu2_2</string>
    
    <!-- ActionModeMenuActivity -->
    <string name="action_mode_menu_activity_title">Action mode menu</string>
    <string name="action_mode_activity_menu_1">Actionmode menu1</string>
    <string name="action_mode_activity_menu_2">Actionmode menu2</string>
    <string name="action_mode_activity_menu_2_1">Actionmode menu2_1</string>
    <string name="action_mode_activity_menu_2_2">Actionmode menu2_2</string>
    
    <!-- PopupMenuActivity -->
    <string name="pop_up_menu_activity_title">Popup menu</string>
        <string name="popup_activity_menu_1">Popup menu 1</string>
    <string name="popup_activity_menu_2">Popup menu 2</string>
    <string name="popup_activity_menu_2_1">Popup menu 2_1</string>
    <string name="popup_activity_menu_2_2">Popup menu 2_2</string>
    
    <!-- ActionBarFeatrueList -->
	<string name="action_bar_activity_title">ActionBarfeature list</string>
	
	<!-- ActionBarActivity -->
	<string name="action_bar_title">ActionBar</string>
	<string name="actionbar_1">ActionBar1</string>
 	<string name="actionbar_2">ActionBar2</string>
    <string name="actionbar_2_1">ActionBar2_1</string>
    <string name="actionbar_2_2">ActionBar2_2</string>
    
    <!-- ServiceFeatureList -->
    <string name="service_feature_list_title">Service list</string>
    
    <!-- StartupServiceActivity -->
    <string name="startup_service_activity_title">Startup service</string>
    
    <!-- RemoteServiceActivity -->
    <string name="remote_service_activity_title">Remote service</string>
	   
    <!-- OptimizationFeatureList -->
    <string name="optimization_feature_list_title">Optimization Feature List</string>
    
    <!-- TraceViewList -->
    <string name="trace_view_list_title">TraceView</string>
    
    <!-- TraceViewBeforeOptimization -->
    <string name="trace_view_before_optimization_title">Activity before optimization</string>
    
    <!-- TraceViewAfterOptimization -->
    <string name="trace_view_after_optimization_title">Activity after optimization</string>
    
    <!-- APIFeatureList -->
    <string name="api_feature_list_title">API feature list</string>
    
    <!-- Positioning -->
    <string name="positioning_title">Positioning</string>
    <string name="positioning_gps">GPS position</string>
    <string name="positioning_gps_running">GPS position......</string>
    <string name="positioning_google_by_network">Google position by network</string>
    <string name="positioning_google_by_network_running">Google position by network......</string>
    <string name="positioning_baidu">Baidu position</string>
    <string name="positioning_baidu_running">Baidu position......</string>
    
    <!-- AsynchronousFeatureList -->
    <string name="asynchronous_feature_list_title">Asynchronous List</string>
    
    <!-- AsyncTaskActivity -->
    <string name="async_task_activity">AsyncTask</string>
    
    <!-- AsyncQueryHandlerActivity -->
    <string name="async_query_handler_activity_title">AsyncQueryHandler</string>
    
    <!-- IntentServiceActivity -->
    <string name="intent_service_activity_title">IntentService</string>
    
    <!-- GraphicsFeatureList -->
    <string name="graphics_feature_list_tilte">Graphics feature list</string>
    
    <!-- ImageConversion -->
    <string name="image_conversion_title">Image conversion</string>
    
    <!-- CanvasList -->
    <string name="canvas_list_tilte">Use canvas</string>
    
    <!-- AlgorithmsFeatureList -->
    <string name="algorithms_feature_list_title">Algorithms list</string>
    
    <!-- SortFeatureActivity -->
    <string name="sort_feature_activity_title">Sort Feature</string>
    
    <!-- SortActivity -->
    <string name="sort_activity_title">Sort</string>
    <string name="sort_activity_title_sort_type_bubble">Sort by bubble:</string>
    <string name="sort_activity_title_sort_type_fast">Sort by fast:</string>
    <string name="sort_activity_title_sort_type_pick">Sort by pick:</string>
    <string name="sort_activity_title_sort_type_insert">Sort by insert:</string>
    <string name="sort_activity_title_sort_type_heap">Sort by heap:</string>
    <string name="sort_activity_title_sort_type_shell">Sort by shell:</string>
    <string name="sort_activity_title_sort_type_merge">Sort by merge:</string>

</resources>