<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/popup_menu_1"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/popup_activity_menu_1"/>
    <item
        android:id="@+id/popup_menu_2"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/popup_activity_menu_2">
        <!-- 创建子菜单 -->
        <menu>
            <item
                android:id="@+id/popup_menu_2_1"
                android:icon="@drawable/ic_launcher"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/popup_activity_menu_2_1"/>
            <item
                android:id="@+id/popup_menu_2_2"
                android:icon="@drawable/ic_launcher"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/popup_activity_menu_2_2">
            </item>
        </menu>
    </item>

</menu>