<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
		android:showAsAction：
			1、always：这个值会使菜单项一直显示在Action Bar上。
			2、ifRoom：如果有足够的空间，这个值会使菜单项显示在Action Bar上。
			3、never：这个值使菜单项永远都不出现在Action Bar上。
			4、withText：这个值使菜单项和它的图标，菜单文本一起显示
    -->
    <item
        android:id="@+id/menu_1"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/option_menu_activity_menu_1"/>
    <item
        android:id="@+id/menu_2"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/option_menu_activity_menu_2">
        <!-- 创建子菜单 -->
        <menu>
            <item
                android:id="@+id/menu_2_1"
                android:icon="@drawable/ic_launcher"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/option_menu_activity_menu_2_1"/>
            <item
                android:id="@+id/menu_2_2"
                android:icon="@drawable/ic_launcher"
                android:orderInCategory="100"
                android:showAsAction="never"
                android:title="@string/option_menu_activity_menu_2_2">
            </item>
        </menu>
    </item>

</menu>