<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- GPS定位 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positioning_gps" />

        <Switch
            android:id="@+id/gps_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip" />

        <TextView
            android:id="@+id/gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positioning_gps_running" />
    </LinearLayout>

    <!-- Google网络定位 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positioning_google_by_network" />

        <Switch
            android:id="@+id/google_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip" />

        <TextView
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positioning_google_by_network_running" />
    </LinearLayout>

    <!-- 百度定位 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positioning_baidu" />

        <Switch
            android:id="@+id/baidu_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:layout_marginTop="15dip" />

        <TextView
            android:id="@+id/baidu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/positioning_baidu_running" />
    </LinearLayout>

</LinearLayout>